[tool.poetry]
name = "rivuletpy"
version = "0.3.0"
description = "Rivuletpy: a powerful tool to automatically trace single neurons from 3D light microscopic images."
authors = ["RivuletStudio"]
license = "BSD"
readme = "README.md"
include = [
    {path = "rivuletpy/msfm/*.c", format="sdist"},
    {path = "rivuletpy/msfm/*.h", format="sdist"}
]

[tool.poetry.build]
script = "build.py"

[tool.poetry.dependencies]
python = ">=3.10, <3.11" 
numpy = "^1.23.3"
scipy = "^1.9.1"
Cython = "^0.29.32"
scikit-fmm = "^2022.8.15"
scikit-image = "^0.18"
matplotlib = "^3.6.0"
nibabel = "^4.0.2"
pyglet = "^1.5.27"
tqdm = "^4.64.1"
pylibtiff = "^0.4.4"


[build-system]
requires = ["poetry-core", "wheel", "setuptools", "numpy", "Cython"]
build-backend = "poetry.core.masonry.api"
